arranged in folders

--- a/FAQS/faqpage.html
+++ b/FAQS/faqpage.html
@@ -6,11 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>FAQs</title>
-  <link rel="stylesheet" href="./cursor/style.css">
+  <link rel="stylesheet" href="../cursor/style.css">
   <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
   <!-- <link rel="stylesheet" href="style.css" /> -->
-  <link rel="stylesheet" href="faqpagestyle.css" />
-  <link rel="icon" href="icon.png" type="image/x-icon" />
+  <link rel="stylesheet" href="./faqpagestyle.css" />
+  <link rel="icon" href="../icon.png" type="image/x-icon" />
  
   <script src="https://kit.fontawesome.com/b08b6de27e.js" crossorigin="anonymous"></script>
 
@@ -20,7 +20,7 @@
 
 <body>
   <header class="header">
-    <img src="icon.png" alt="logo" style="height: 50px; width: 50px; margin-right: 10px" />
+    <img src="../icon.png" alt="logo" style="height: 50px; width: 50px; margin-right: 10px" />
     <a href="#" class="logo" style="margin-inline-end: auto">
       <h3>AgriLearnNetwork</h3>
     </a>
@@ -32,14 +32,14 @@
 
     <i class="bx bx-menu" id="menu-icon"></i>
     <nav class="navbar">
-      <a href="index.html#home"><i class="fa-solid fa-house"></i> Home</a>
-      <a href="./about/about.html"><i class="fa-solid fa-circle-info"></i> About</a>
-      <a href="blogpage.html" target="_self"><i class="fa-solid fa-blog"></i> Blogs</a>
-      <a href="index.html#Resource Library"><i class="fa-solid fa-book"></i> Resource Library</a>
-      <a href="faqpage.html" class="active"><i class="fas fa-question-circle"></i>FAQs</a>
-      <a href="index.html#contact" id="nav--contact"><i class="fa-solid fa-phone"></i> Contact</a>
-      <a href="buy_products.html"><i class="fa fa-shopping-cart"></i>Buy Products</a>
-      <a href="login.html">
+      <a href="../index.html#home"><i class="fa-solid fa-house"></i> Home</a>
+      <a href="../about/about.html"><i class="fa-solid fa-circle-info"></i> About</a>
+      <a href="../blog/blogpage.html" target="_self"><i class="fa-solid fa-blog"></i> Blogs</a>
+      <a href="../index.html#Resource Library"><i class="fa-solid fa-book"></i> Resource Library</a>
+      <a href="./faqpage.html" class="active"><i class="fas fa-question-circle"></i>FAQs</a>
+      <a href="../index.html#contact" id="nav--contact"><i class="fa-solid fa-phone"></i> Contact</a>
+      <a href="../buyproducts/buy_products.html"><i class="fa fa-shopping-cart"></i>Buy Products</a>
+      <a href="../login/login.html">
         <button id="log-in-btn" class="login-btn">Login</button>
       </a>
 
@@ -52,13 +52,13 @@
       <div class="faq_heading" data-aos="fade-up">Frequently Asked Questions (FAQ)</div>
       <div class="faq_box">
         <div class="image" data-aos="fade-right">
-          <img class="faq-img" src="./faq/FAQ.png" alt="FAQ">
+          <img class="faq-img" src="../faq/FAQ.png" alt="FAQ">
         </div>
         <div class="accordion-container" data-aos="fade-left">
           <!-- Question-1 -->
           <div class="accordion">
             <div class="accordion-header" onclick="toggleAccordion(this)">
-              <span><img src="./faq/Expand-more.svg" alt="Expand" data-light-icon="./faq/Expand-more.svg" data-dark-icon="./faq/Expand-more-dark.svg"></span>
+              <span><img src="../faq/Expand-more.svg" alt="Expand" data-light-icon="../faq/Expand-more.svg" data-dark-icon="../faq/Expand-more-dark.svg"></span>
               <h3>What is AgriLearnNetwork?</h3>
             </div>
             <div class="accordion-body">
@@ -71,7 +71,7 @@
           <!-- Question-2 -->
           <div class="accordion">
             <div class="accordion-header" onclick="toggleAccordion(this)">
-              <span><img src="./faq/Expand-more.svg" alt="Expand" data-light-icon="./faq/Expand-more.svg" data-dark-icon="./faq/Expand-more-dark.svg"></span>
+              <span><img src="../faq/Expand-more.svg" alt="Expand" data-light-icon="../faq/Expand-more.svg" data-dark-icon="../faq/Expand-more-dark.svg"></span>
               <h3>Who can benefit from AgriLearnNetwork?</h3>
             </div>
             <div class="accordion-body">
@@ -84,7 +84,7 @@
           <!--Question-3-->
           <div class="accordion">
             <div class="accordion-header" onclick="toggleAccordion(this)">
-              <span><img src="./faq/Expand-more.svg" alt="Expand" data-light-icon="./faq/Expand-more.svg" data-dark-icon="./faq/Expand-more-dark.svg"></span>
+              <span><img src="../faq/Expand-more.svg" alt="Expand" data-light-icon="../faq/Expand-more.svg" data-dark-icon="../faq/Expand-more-dark.svg"></span>
               <h3>What features does AgriLearnNetwork offer?</h3>
             </div>
             <div class="accordion-body">
@@ -102,7 +102,7 @@
           <!--Question-6-->
           <div class="accordion">
             <div class="accordion-header" onclick="toggleAccordion(this)">
-              <span><img src="./faq/Expand-more.svg" alt="Expand" data-light-icon="./faq/Expand-more.svg" data-dark-icon="./faq/Expand-more-dark.svg"></span>
+              <span><img src="../faq/Expand-more.svg" alt="Expand" data-light-icon="../faq/Expand-more.svg" data-dark-icon="../faq/Expand-more-dark.svg"></span>
               <h3>What types of farming does AgriLearnNetwork support?</h3>
             </div>
             <div class="accordion-body">
@@ -114,7 +114,7 @@
           <!--Question-7-->
           <div class="accordion">
             <div class="accordion-header" onclick="toggleAccordion(this)">
-              <span><img src="./faq/Expand-more.svg" alt="Expand" data-light-icon="./faq/Expand-more.svg" data-dark-icon="./faq/Expand-more-dark.svg"></span>
+              <span><img src="../faq/Expand-more.svg" alt="Expand" data-light-icon="../faq/Expand-more.svg" data-dark-icon="../faq/Expand-more-dark.svg"></span>
               <h3>Is AgriLearnNetwork free to use?</h3>
             </div>
             <div class="accordion-body">
@@ -125,7 +125,7 @@
           <!--Question-8-->
           <div class="accordion">
             <div class="accordion-header" onclick="toggleAccordion(this)">
-              <span><img src="./faq/Expand-more.svg" alt="Expand" data-light-icon="./faq/Expand-more.svg" data-dark-icon="./faq/Expand-more-dark.svg"></span>
+              <span><img src="../faq/Expand-more.svg" alt="Expand" data-light-icon="../faq/Expand-more.svg" data-dark-icon="../faq/Expand-more-dark.svg"></span>
               <h3>Can I get personalized advice from experts on Agrilearn Network?</h3>
             </div>
             <div class="accordion-body">
@@ -136,7 +136,7 @@
           <!--Question-9-->
           <div class="accordion">
             <div class="accordion-header" onclick="toggleAccordion(this)">
-              <span><img src="./faq/Expand-more.svg" alt="Expand" data-light-icon="./faq/Expand-more.svg" data-dark-icon="./faq/Expand-more-dark.svg"></span>
+              <span><img src="../faq/Expand-more.svg" alt="Expand" data-light-icon="../faq/Expand-more.svg" data-dark-icon="../faq/Expand-more-dark.svg"></span>
               <h3>How can I stay updated with the latest agricultural trends and news?</h3>
             </div>
             <div class="accordion-body">
@@ -148,7 +148,7 @@
           <!--Question-10-->
           <div class="accordion">
             <div class="accordion-header" onclick="toggleAccordion(this)">
-              <span><img src="./faq/Expand-more.svg" alt="Expand" data-light-icon="./faq/Expand-more.svg" data-dark-icon="./faq/Expand-more-dark.svg"></span>
+              <span><img src="../faq/Expand-more.svg" alt="Expand" data-light-icon="../faq/Expand-more.svg" data-dark-icon="../faq/Expand-more-dark.svg"></span>
               <h3>Does AgriLearnNetwork offer any training programs or courses?</h3>
             </div>
             <div class="accordion-body">
@@ -159,7 +159,7 @@
           <!--Question-11-->
           <div class="accordion">
             <div class="accordion-header" onclick="toggleAccordion(this)">
-              <span><img src="./faq/Expand-more.svg" alt="Expand" data-light-icon="./faq/Expand-more.svg" data-dark-icon="./faq/Expand-more-dark.svg"></span>
+              <span><img src="../faq/Expand-more.svg" alt="Expand" data-light-icon="../faq/Expand-more.svg" data-dark-icon="../faq/Expand-more-dark.svg"></span>
               <h3>How do I participate in community forums on AgriLearnNetwork?</h3>
             </div>
             <div class="accordion-body">
@@ -197,37 +197,37 @@
       <h2>Quick Links</h2>
       <ul>
         <li>
-          <a href="index.html#home">
+          <a href="../index.html">
             <p>Home</p>
           </a>
         </li>
         <li>
-          <a href="./about/about.html">
+          <a href="../about/about.html">
             <p>About Us</p>
           </a>
         </li>
         <li>
-          <a href="blogpage.html">
+          <a href="../blog/blogpage.html">
             <p>Blogs</p>
           </a>
         </li>
         <li>
-          <a href="faqpage.html">
+          <a href="./faqpage.html">
             <p>FAQs</p>
           </a>
         </li>
         <li>
-          <a href="index.html#Resource Library">
+          <a href="../index.html#Resource Library">
             <p>Resource Library</p>
           </a>
         </li>
         <li>
-          <a href="index.html#contact">
+          <a href="../index.html#contact">
             <p>Contact Us</p>
           </a>
         </li>
         <li>
-          <a href="buy_products.html"><p>Buy Products</p></a>
+          <a href="../buyproducts/buy_products.html"><p>Buy Products</p></a>
         </li>
       </ul>
     </div>
@@ -248,7 +248,7 @@
     <div class="cursor2"></div>
 
 
-  <script src="script.js"></script>
+  <script src="../script.js"></script>
 
 
   <script>
