--- a/buyproducts/buy_products.html
+++ b/buyproducts/buy_products.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agricultural Tools Store</title>
-    <link rel="stylesheet" href="buy_products.css">
+    <link rel="stylesheet" href="./buy_products.css">
 
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet"/>
     <script src="https://kit.fontawesome.com/b08b6de27e.js" crossorigin="anonymous"></script>
-    <link rel="icon" href="icon.png" type="image/x-icon" />
+    <link rel="icon" href="../icon.png" type="image/x-icon" />
 
 </head>
 <body>
     <header class="header">
         <img
-          src="icon.png"
+          src="../icon.png"
           alt="logo"
           style="height: 50px; width: 50px; margin-right: 10px;"
         />
@@ -31,23 +31,23 @@
          </a>
          <i class="bx bx-menu" id="menu-icon"></i>
         <nav class="navbar active">
-          <a href="index.html#home"
+          <a href="../index.html"
             ><i class="fa-solid fa-house"></i> Home</a>
-          <a href="./about/about.html"><i class="fa-solid fa-circle-info"></i> About</a>
-          <a href="blogpage.html" target="_self">
+          <a href="../about/about.html"><i class="fa-solid fa-circle-info"></i> About</a>
+          <a href="../blog/blogpage.html" target="_self">
             <i class="fa-solid fa-blog"></i> Blogs</a
           >
-          <a href="index.html#Resource Library"
+          <a href="../index.html#Resource Library"
             ><i class="fa-solid fa-book"></i> Resource Library</a
           >
-          <a href="faqpage.html" target="_self"><i class="fas fa-question-circle"></i>FAQ</a>
-          <a href="index.html#contact" id="nav--contact"
+          <a href="../FAQS/faqpage.html" target="_self"><i class="fas fa-question-circle"></i>FAQ</a>
+          <a href="../index.html#contact" id="nav--contact"
             ><i class="fa-solid fa-phone"></i> Contact</a
           >
-          <a href="buy_products.html" class="active content"
+          <a href="./buy_products.html" class="active content"
             ><i class="fa fa-shopping-cart"></i>Buy Products</a
           >
-          <a href="login.html">
+          <a href="../login/login.html">
             <button id="log-in-btn" class="login-btn">Login</button>
           </a>
         </nav>
@@ -310,25 +310,25 @@
         <h2>Quick Links</h2>
         <ul>
           <li>
-            <a href="#home"><p>Home</p></a>
+            <a href="../index.html"><p>Home</p></a>
           </li>
           <li>
-            <a href="./about/about.html"><p>About Us</p></a>
+            <a href="../about/about.html"><p>About Us</p></a>
           </li>
           <li>
-            <a href="blogpage.html"><p>Blogs</p></a>
+            <a href="../blog/blogpage.html"><p>Blogs</p></a>
           </li>
           <li>
-            <a href="faqpage.html"><p>FAQ</p></a>
+            <a href="../FAQS/faqpage.html"><p>FAQ</p></a>
           </li>
           <li>
-            <a href="#Resource Library"><p>Resource Library</p></a>
+            <a href="../index.html#Resource Library"><p>Resource Library</p></a>
           </li>
           <li>
-            <a href="#contact"><p>Contact Us</p></a>
+            <a href="../index.html#contact"><p>Contact Us</p></a>
           </li>
           <li>
-            <a href="buy_products.html"><p>Buy Products</p></a>
+            <a href="./buy_products.html"><p>Buy Products</p></a>
           </li>
         </ul>
       </div>
@@ -343,7 +343,7 @@
       </div>
     </footer>
     <div  id="backtoTop">
-      <a href="#home"><i class="bx bx-up-arrow-alt"  id="go-to-top" title="Go to top"></i></a>
+      <a href="./buy_products.html"><i class="bx bx-up-arrow-alt"  id="go-to-top" title="Go to top"></i></a>
     </div>
     <div class="cursor"></div>
     <div class="cursor2"></div>
@@ -390,6 +390,6 @@
         header.classList.toggle("sticky", window.scrollY >10)
       })
     </script>
-    <script src="buy_products.js"></script>
+    <script src="./buy_products.js"></script>
 </body>
 </html>
