--- a/index.html
+++ b/index.html
@@ -73,20 +73,20 @@
           ><i class="fa-solid fa-house"></i> Home</a
         >
         <a href="./about/about.html"><i class="fa-solid fa-circle-info"></i> About</a>
-        <a href="blogpage.html" target="_self">
+        <a href="./blog/blogpage.html" target="_self">
           <i class="fa-solid fa-blog"></i> Blogs</a
         >
         <a href="#Resource Library"
           ><i class="fa-solid fa-book"></i> Resource Library</a
         >
-        <a href="faqpage.html" target="_self"><i class="fas fa-question-circle"></i>FAQs</a>
+        <a href="./FAQS/faqpage.html" target="_self"><i class="fas fa-question-circle"></i>FAQs</a>
         <a href="#contact" id="nav--contact"
           ><i class="fa-solid fa-phone"></i> Contact</a
         >
-        <a href="buy_products.html"
+        <a href="./buyproducts/buy_products.html"
             ><i class="fa fa-shopping-cart"></i>Buy Products</a
           >
-        <a href="login.html">
+        <a href="./login/login.html">
           <button id="log-in-btn" class="login-btn">Login</button>
         </a>
       </nav>
@@ -454,10 +454,10 @@
             <a href="./about/about.html"><p>About Us</p></a>
           </li>
           <li>
-            <a href="blogpage.html"><p>Blogs</p></a>
+            <a href="./blog/blogpage.html"><p>Blogs</p></a>
           </li>
           <li>
-            <a href="faqpage.html"><p>FAQs</p></a>
+            <a href="./FAQS/faqpage.html"><p>FAQs</p></a>
           </li>
           <li>
             <a href="#Resource Library"><p>Resource Library</p></a>
@@ -466,7 +466,7 @@
             <a href="#contact"><p>Contact Us</p></a>
           </li>
           <li>
-            <a href="buy_products.html"><p>Buy Products</p></a>
+            <a href="./buyproducts/buy_products.html"><p>Buy Products</p></a>
           </li>
         </ul>
       </div>
