--- a/login/login.html
+++ b/login/login.html
@@ -8,17 +8,17 @@
       src="https://kit.fontawesome.com/f2e55912f8.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="login.css" />
+    <link rel="stylesheet" href="../style.css" />
+    <link rel="stylesheet" href="./login.css" />
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../style.css" />
 
-    <link rel="icon" href="icon.png" type="image/x-icon" />
-    <link rel="stylesheet" type="text/css" href="./style.css" />
-    <link rel="stylesheet" href="./cursor/style.css">
+    <link rel="icon" href="../icon.png" type="image/x-icon" />
+    <link rel="stylesheet" type="text/css" href="../style.css" />
+    <link rel="stylesheet" href="../cursor/style.css">
     <script
       src="https://kit.fontawesome.com/b08b6de27e.js"
       crossorigin="anonymous"
@@ -27,7 +27,7 @@
   <body>
     <header class="header">
       <img
-        src="icon.png"
+        src="../icon.png"
         alt="logo"
         style="height: 50px; width: 50px; margin-right: 10px"
       />
@@ -37,22 +37,22 @@
 
       <i class="bx bx-menu" id="menu-icon"></i>
       <nav class="navbar">
-        <a href="index.html#home" class="active"
+        <a href="../index.html" class="active"
           ><i class="fa-solid fa-house"></i> Home</a
         >
-        <a href="./about/about.html"
+        <a href="../about/about.html"
           ><i class="fa-solid fa-circle-info"></i> About</a
         >
-        <a href="blogpage.html" target="_self">
+        <a href="../blog/blogpage.html" target="_self">
           <i class="fa-solid fa-blog"></i> Blogs</a
         >
-        <a href="index.html#Resource Library"
+        <a href="../index.html#Resource Library"
           ><i class="fa-solid fa-book"></i> Resource Library</a
         >
-        <a href="faqpage.html" target="_self"
+        <a href="../FAQS/faqpage.html" target="_self"
           ><i class="fas fa-question-circle"></i>FAQ</a
         >
-        <a href="index.html#contact" id="nav--contact"
+        <a href="../index.html#contact" id="nav--contact"
           ><i class="fa-solid fa-phone"></i> Contact</a
         >
       </nav>
@@ -168,19 +168,19 @@
         <h2>Quick Links</h2>
         <ul>
           <li>
-            <a href="index.html#home"><p>Home</p></a>
+            <a href="../index.html"><p>Home</p></a>
           </li>
           <li>
-            <a href="./about/about.html"><p>About Us</p></a>
+            <a href="../about/about.html"><p>About Us</p></a>
           </li>
           <li>
-            <a href="blogpage.html"><p>Blogs</p></a>
+            <a href="../blog/blogpage.html"><p>Blogs</p></a>
           </li>
           <li>
-            <a href="index.html#Resource Library"><p>Resource Library</p></a>
+            <a href="../index.html#Resource Library"><p>Resource Library</p></a>
           </li>
           <li>
-            <a href="index.html#contact"><p>Contact Us</p></a>
+            <a href="../index.html#contact"><p>Contact Us</p></a>
           </li>
         </ul>
       </div>
@@ -196,8 +196,8 @@
       <div class="cursor"></div>
     <div class="cursor2"></div>
     </footer>
-    <script src="login.js"></script>
-    <script src="script.js"></script>
+    <script src="./login.js"></script>
+    <script src="../script.js"></script>
     <script>
       var cursor = document.querySelector(".cursor");
       var cursor2 = document.querySelector(".cursor2");
