--- a/about/about.html
+++ b/about/about.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="../icon.png"  type="image/png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- custom styles -->
@@ -44,12 +45,12 @@
         <nav class="navbar">
             <a href="../index.html" class="content"><i class="fa-solid fa-house"></i> Home</a>
             <a href="./about.html" class="active"><i class="fa-solid fa-circle-info"></i> About</a>
-            <a href="../blogpage.html" target="_self"><i class="fa-solid fa-blog"></i> Blogs</a>
+            <a href="../blog/blogpage.html" target="_self"><i class="fa-solid fa-blog"></i> Blogs</a>
             <a href="../index.html#Resource Library"><i class="fa-solid fa-book"></i> Resource Library</a>
-            <a href="../faqpage.html" target="_self"><i class="fas fa-question-circle"></i>FAQs</a>
+            <a href="../FAQS/faqpage.html" target="_self"><i class="fas fa-question-circle"></i>FAQs</a>
             <a href="../index.html#contact" id="nav--contact"><i class="fa-solid fa-phone"></i> Contact</a>
-            <a href="../buy_products.html"><i class="fa fa-shopping-cart"></i>Buy Products</a>
-            <a href="../login.html"><button id="log-in-btn" class="login-btn">Login</button></a>
+            <a href="../buyproducts/buy_products.html"><i class="fa fa-shopping-cart"></i>Buy Products</a>
+            <a href="../login/login.html"><button id="log-in-btn" class="login-btn">Login</button></a>
         </nav>
     </header>
 
@@ -58,7 +59,7 @@
     <div class="hero">
 
         <video class="hero-video" autoplay muted loop>
-            <source src="../Agriculturevideo.mp4" type="video/mp4">
+            <source src="./Agriculturevideo.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
         <div class="hero-content">
@@ -147,12 +148,12 @@
                     </a>
                 </li>
                 <li>
-                    <a href="../blogpage.html">
+                    <a href="../blog/blogpage.html">
                         <p>Blogs</p>
                     </a>
                 </li>
                 <li>
-                    <a href="../faqpage.html">
+                    <a href="../FAQS/faqpage.html">
                         <p>FAQ</p>
                     </a>
                 </li>
@@ -167,7 +168,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="../buy_products.html">
+                    <a href="../buyproducts/buy_products.html">
                         <p>Buy Products</p>
                     </a>
                 </li>
