--- a/FAQS/faqpage.html
+++ b/FAQS/faqpage.html
@@ -49,7 +49,7 @@
   <!--FAQ Section-->
   <div class="faq_container">
     <section id="faq" class="faq">
-      <div class="faq_heading" data-aos="fade-up">Frequently Asked Questions (FAQ)</div>
+      <div class="faq_heading" data-aos="fade-up">Asked Questions (FAQ)</div>
       <div class="faq_box">
         <div class="image" data-aos="fade-right">
           <img class="faq-img" src="../faq/FAQ.png" alt="FAQ">
