testimonials in folder

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     />
     <link rel="stylesheet" href="./cursor/style.css">
-    <link rel="stylesheet" href="testimonials.css">
+    <link rel="stylesheet" href="./testimonials/testimonials.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
     <!-- <script src="testimonials.js" defer></script> -->
 
@@ -283,7 +283,7 @@
     <!-- Testimonials Section -->
     <h1 id="testi">OUR TESTIMONIALS</h1>
     <div class="wrapper">
-      <script src="testimonials.js" defer></script>
+      <script src="./testimonials/testimonials.js" defer></script>
       <i id="left" class="fa-solid fa-angle-left"></i>
       
       <ul class="carousel">
