changed hovering effect in social icons and fix positoons of all the items which was displaced on hovering

--- a/login/login.html
+++ b/login/login.html
@@ -64,12 +64,12 @@
           <h1>Create Account</h1>
           <div class="social-icons">
             <a href="#" class="icon"
-              ><i class="fa-brands fa-google-plus-g"></i
-            ></a>
-            <a href="#" class="icon"><i class="fa-brands fa-github"></i></a>
+              ><div class="mail" id="ma"><i class="fa-brands fa-google-plus-g"></i
+            ></div></a>
+            <a href="#" class="icon"><div class="mail" id="gi"><i class="fa-brands fa-github"></i></div></a>
             <a href="#" class="icon"
-              ><i class="fa-brands fa-linkedin-in"></i
-            ></a>
+              ><div class="mail" id="li"><i class="fa-brands fa-linkedin-in"></i
+            ></div></a>
           </div>
           <span>or use your email for registeration</span>
           <input type="text" id="signup-Name" placeholder="Enter your Name" required/>
@@ -97,12 +97,12 @@
           <h1>Sign In</h1>
           <div class="social-icons">
             <a href="#" class="icon"
-              ><i class="fa-brands fa-google-plus-g"></i
-            ></a>
-            <a href="#" class="icon"><i class="fa-brands fa-github"></i></a>
+              ><div class="mail" id="ma"><i class="fa-brands fa-google-plus-g"></i
+            ></div></a>
+            <a href="#" class="icon"><div class="mail" id="gi"><i class="fa-brands fa-github"></i></div></a>
             <a href="#" class="icon"
-              ><i class="fa-brands fa-linkedin-in"></i
-            ></a>
+              ><div class="mail" id="li"><i class="fa-brands fa-linkedin-in"></i
+            ></div></a>
           </div>
           <span>or use your email password</span>
           <div class="input-password">
