Revert "Testimonial section made resposive"

--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
       <ul class="carousel">
         <li class="card">
           <div class="img"><img src="https://images.pexels.com/photos/2379005/pexels-photo-2379005.jpeg?auto=compress&cs=tinysrgb&w=600" alt="img" draggable="false"></div>
-          <h2 id="testnames">Blance Pearson</h2>
+          <h2 id="testnames">Blanche Pearson</h2>
           <span>AgriLearnNetwork has revolutionized my farming practices with its easy-to-follow sustainable methods. The community support is amazing!</span>
         </li>
         <li class="card">
