Align footer and update its content

--- a/FAQS/faqpage.html
+++ b/FAQS/faqpage.html
@@ -8,7 +8,7 @@
   <title>FAQs</title>
   <link rel="stylesheet" href="../cursor/style.css">
   <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
-  <!-- <link rel="stylesheet" href="style.css" /> -->
+  <link rel="stylesheet" href="../style.css" />
   <link rel="stylesheet" href="./faqpagestyle.css" />
   <link rel="icon" href="../icon.png" type="image/x-icon" />
  
@@ -184,50 +184,51 @@
       <div class="footer-icons">
         <p><b>Follow us on our socials:</b></p>
         <div class="socialIcons">
-          <a href="mailto:AgriLearnNetwork@gmail.com" class="email-link" data-tooltip="AgriLearnNetwork@gmail.com"><i
-              class="fas fa-envelope"></i></a>
-          <a href="https://www.instagram.com/your_username_here" target="_blank"><i class="fab fa-instagram"></i></a>
-          <a href="https://twitter.com/your_username_here" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
-          <a href="https://www.facebook.com/your_page_or_profile_here" target="_blank"><i
-              class="fab fa-facebook"></i></a>
+          <a
+            href="mailto:AgriLearnNetwork@gmail.com"
+            class="email-link"
+            data-tooltip="AgriLearnNetwork@gmail.com"
+            ><i class="fas fa-envelope"></i
+          ></a>
+          <a
+            href="https://www.instagram.com/your_username_here"
+            target="_blank"
+            ><i class="fab fa-instagram"></i
+          ></a>
+          <a href="https://twitter.com/your_username_here" target="_blank"
+            ><i class="fa-brands fa-x-twitter"></i
+          ></a>
+          <a
+            href="https://www.facebook.com/your_page_or_profile_here"
+            target="_blank"
+            ><i class="fab fa-facebook"></i
+          ></a>
         </div>
       </div>
     </div>
-<div class="quick-links">
+    <div class="quick-links">
       <h2>Quick Links</h2>
       <ul>
         <li>
-          <a href="../index.html">
-            <p>Home</p>
-          </a>
+          <a href="#home"><p>Home</p></a>
         </li>
         <li>
-          <a href="../about/about.html">
-            <p>About Us</p>
-          </a>
+          <a href="./about/about.html"><p>About Us</p></a>
         </li>
         <li>
-          <a href="../blog/blogpage.html">
-            <p>Blogs</p>
-          </a>
+          <a href="./blog/blogpage.html"><p>Blogs</p></a>
         </li>
         <li>
-          <a href="./faqpage.html">
-            <p>FAQs</p>
-          </a>
+          <a href="./FAQS/faqpage.html"><p>FAQs</p></a>
         </li>
         <li>
-          <a href="../index.html#Resource Library">
-            <p>Resource Library</p>
-          </a>
+          <a href="#Resource Library"><p>Resource Library</p></a>
         </li>
         <li>
-          <a href="../index.html#contact">
-            <p>Contact Us</p>
-          </a>
+          <a href="#contact"><p>Contact Us</p></a>
         </li>
         <li>
-          <a href="../buyproducts/buy_products.html"><p>Buy Products</p></a>
+          <a href="./buyproducts/buy_products.html"><p>Buy Products</p></a>
         </li>
       </ul>
     </div>
@@ -241,6 +242,7 @@
       </p>
     </div>
   </footer>
+
   <div id="backtoTop">
     <a href="faqpage.html"><i class="bx bx-up-arrow-alt"></i></a>
   </div>
