--- a/login/login.html
+++ b/login/login.html
@@ -177,10 +177,16 @@
             <a href="../blog/blogpage.html"><p>Blogs</p></a>
           </li>
           <li>
+            <a href="../FAQS/faqpage.html"><p>FAQs</p></a>
+          </li>
+          <li>
             <a href="../index.html#Resource Library"><p>Resource Library</p></a>
           </li>
           <li>
             <a href="../index.html#contact"><p>Contact Us</p></a>
+          </li>
+          <li>
+            <a href="../buyproducts/buy_products.html"><p>Buy Products</p></a>
           </li>
         </ul>
       </div>
