--- a/FAQS/faqpage.html
+++ b/FAQS/faqpage.html
@@ -8,14 +8,9 @@
   <title>FAQs</title>
   <link rel="stylesheet" href="../cursor/style.css">
   <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
-  <!-- <link rel="stylesheet" href="style.css" /> -->
   <link rel="stylesheet" href="./faqpagestyle.css" />
   <link rel="icon" href="../icon.png" type="image/x-icon" />
- 
   <script src="https://kit.fontawesome.com/b08b6de27e.js" crossorigin="anonymous"></script>
-
-
-
 </head>
 
 <body>
@@ -24,12 +19,10 @@
     <a href="#" class="logo" style="margin-inline-end: auto">
       <h3>AgriLearnNetwork</h3>
     </a>
-
     <div class="theme-toggle">
       <i class="fas fa-sun"></i>
       <i class="fas fa-moon"></i>
     </div>
-
     <i class="bx bx-menu" id="menu-icon"></i>
     <nav class="navbar">
       <a href="../index.html#home"><i class="fa-solid fa-house"></i> Home</a>
@@ -42,140 +35,111 @@
       <a href="../login/login.html">
         <button id="log-in-btn" class="login-btn">Login</button>
       </a>
-
     </nav>
   </header>
 
-  <!--FAQ Section-->
-  <div class="faq_container">
-    <section id="faq" class="faq">
-      <div class="faq_heading" data-aos="fade-up">Frequently Asked Questions (FAQ)</div>
-      <div class="faq_box">
-        <div class="image" data-aos="fade-right">
-          <img class="faq-img" src="../faq/FAQ.png" alt="FAQ">
+  <h1 class="faqs-whole-container-faq-heading">Frequently Asked Question's</h1>
+  <div class="faqs-whole-container">
+    <div class="faqs-whole-container-content">
+      <div class="faqs-whole-container-faq-item">
+        <div class="faqs-whole-container-question">
+          What is AgriLearnNetwork? <span class="faqs-whole-container-toggle-icon">+</span>
         </div>
-        <div class="accordion-container" data-aos="fade-left">
-          <!-- Question-1 -->
-          <div class="accordion">
-            <div class="accordion-header" onclick="toggleAccordion(this)">
-              <span><img src="../faq/Expand-more.svg" alt="Expand" data-light-icon="../faq/Expand-more.svg" data-dark-icon="../faq/Expand-more-dark.svg"></span>
-              <h3>What is AgriLearnNetwork?</h3>
-            </div>
-            <div class="accordion-body">
-              <p>AgriLearnNetwork is a comprehensive platform dedicated to empowering farmers by providing essential
-                insights, resources, and strategic management approaches for successful agriculture practices. Our
-                platform offers detailed guidance and in-depth knowledge across various facets of farming.
-              </p>
-            </div>
-          </div>
-          <!-- Question-2 -->
-          <div class="accordion">
-            <div class="accordion-header" onclick="toggleAccordion(this)">
-              <span><img src="../faq/Expand-more.svg" alt="Expand" data-light-icon="../faq/Expand-more.svg" data-dark-icon="../faq/Expand-more-dark.svg"></span>
-              <h3>Who can benefit from AgriLearnNetwork?</h3>
-            </div>
-            <div class="accordion-body">
-              <p>AgriLearnNetwork is designed for farmers of all scales, agricultural enthusiasts, researchers, and
-                anyone involved in the agriculture industry. It caters to both beginners and experienced farmers looking
-                to enhance their farming practices.
-              </p>
-            </div>
-          </div>
-          <!--Question-3-->
-          <div class="accordion">
-            <div class="accordion-header" onclick="toggleAccordion(this)">
-              <span><img src="../faq/Expand-more.svg" alt="Expand" data-light-icon="../faq/Expand-more.svg" data-dark-icon="../faq/Expand-more-dark.svg"></span>
-              <h3>What features does AgriLearnNetwork offer?</h3>
-            </div>
-            <div class="accordion-body">
-              <p>AgriLearnNetwork offers a wide range of features, including:<br>
-                1.Detailed farming guides<br>
-                2.Crop and livestock management tips<br>
-                3.Weather forecasting tools<br>
-                4.Market price updates<br>
-                5.Expert advice and consultancy services<br>
-                6.Community forums for peer support<br>
-                7.Access to research and best practices in agriculture<br>
-              </p>
-            </div>
-          </div>
-          <!--Question-6-->
-          <div class="accordion">
-            <div class="accordion-header" onclick="toggleAccordion(this)">
-              <span><img src="../faq/Expand-more.svg" alt="Expand" data-light-icon="../faq/Expand-more.svg" data-dark-icon="../faq/Expand-more-dark.svg"></span>
-              <h3>What types of farming does AgriLearnNetwork support?</h3>
-            </div>
-            <div class="accordion-body">
-              <p>AgriLearnNetwork supports a wide range of farming practices, including crop farming, livestock
-                farming,
-                aquaculture, and agroforestry. We provide tailored resources and guidance for each type of farming.</p>
-            </div>
-          </div>
-          <!--Question-7-->
-          <div class="accordion">
-            <div class="accordion-header" onclick="toggleAccordion(this)">
-              <span><img src="../faq/Expand-more.svg" alt="Expand" data-light-icon="../faq/Expand-more.svg" data-dark-icon="../faq/Expand-more-dark.svg"></span>
-              <h3>Is AgriLearnNetwork free to use?</h3>
-            </div>
-            <div class="accordion-body">
-              <p>Yes, AgriLearnNetwork offers free access to most of our resources and tools. However, we also provide
-                premium content and services which are available for a subscription fee.</p>
-            </div>
-          </div>
-          <!--Question-8-->
-          <div class="accordion">
-            <div class="accordion-header" onclick="toggleAccordion(this)">
-              <span><img src="../faq/Expand-more.svg" alt="Expand" data-light-icon="../faq/Expand-more.svg" data-dark-icon="../faq/Expand-more-dark.svg"></span>
-              <h3>Can I get personalized advice from experts on Agrilearn Network?</h3>
-            </div>
-            <div class="accordion-body">
-              <p>Yes, AgriLearnNetwork offers personalized advice from agricultural experts. You can book one-on-one
-                consultation sessions to discuss specific issues and get tailored solutions.</p>
-            </div>
-          </div>
-          <!--Question-9-->
-          <div class="accordion">
-            <div class="accordion-header" onclick="toggleAccordion(this)">
-              <span><img src="../faq/Expand-more.svg" alt="Expand" data-light-icon="../faq/Expand-more.svg" data-dark-icon="../faq/Expand-more-dark.svg"></span>
-              <h3>How can I stay updated with the latest agricultural trends and news?</h3>
-            </div>
-            <div class="accordion-body">
-              <p>To stay updated with the latest agricultural trends and news, you can subscribe to our newsletter.
-                Additionally, our platform regularly updates its blog and news section with relevant articles and
-                information.</p>
-            </div>
-          </div>
-          <!--Question-10-->
-          <div class="accordion">
-            <div class="accordion-header" onclick="toggleAccordion(this)">
-              <span><img src="../faq/Expand-more.svg" alt="Expand" data-light-icon="../faq/Expand-more.svg" data-dark-icon="../faq/Expand-more-dark.svg"></span>
-              <h3>Does AgriLearnNetwork offer any training programs or courses?</h3>
-            </div>
-            <div class="accordion-body">
-              <p>Yes, AgriLearnNetwork offers a variety of training programs and courses covering different aspects of
-                farming. These programs are designed to enhance your knowledge and skills in agriculture.</p>
-            </div>
-          </div>
-          <!--Question-11-->
-          <div class="accordion">
-            <div class="accordion-header" onclick="toggleAccordion(this)">
-              <span><img src="../faq/Expand-more.svg" alt="Expand" data-light-icon="../faq/Expand-more.svg" data-dark-icon="../faq/Expand-more-dark.svg"></span>
-              <h3>How do I participate in community forums on AgriLearnNetwork?</h3>
-            </div>
-            <div class="accordion-body">
-              <p>To participate in community forums, you need to log in to your AgriLearnNetwork account and navigate
-                to
-                the forums section. You can post questions, share experiences, and engage with other community members.
-              </p>
-            </div>
-          </div>
+        <div class="faqs-whole-container-answer">
+          AgriLearnNetwork is a comprehensive platform dedicated to empowering farmers by providing essential
+          insights, resources, and strategic management approaches for successful agriculture practices. Our
+          platform offers detailed guidance and in-depth knowledge across various facets of farming.
         </div>
       </div>
-    </section>
+      <div class="faqs-whole-container-faq-item">
+        <div class="faqs-whole-container-question">
+          Who can benefit from AgriLearnNetwork? <span class="faqs-whole-container-toggle-icon">+</span>
+        </div>
+        <div class="faqs-whole-container-answer">
+          AgriLearnNetwork is designed for farmers of all scales, agricultural enthusiasts, researchers, and
+                anyone involved in the agriculture industry. It caters to both beginners and experienced farmers looking
+                to enhance their farming practices.
+        </div>
+      </div>
+      <div class="faqs-whole-container-faq-item">
+        <div class="faqs-whole-container-question">
+          What features does AgriLearnNetwork offer? <span class="faqs-whole-container-toggle-icon">+</span>
+        </div>
+        <div class="faqs-whole-container-answer">
+          <p>AgriLearnNetwork offers a wide range of features, including:<br>
+            1.Detailed farming guides<br>
+            2.Crop and livestock management tips<br>
+            3.Weather forecasting tools<br>
+            4.Market price updates<br>
+            5.Expert advice and consultancy services<br>
+            6.Community forums for peer support<br>
+            7.Access to research and best practices in agriculture<br>
+          </p>
+        </div>
+      </div>
+      <div class="faqs-whole-container-faq-item">
+        <div class="faqs-whole-container-question">
+          What types of farming does AgriLearnNetwork support? <span class="faqs-whole-container-toggle-icon">+</span>
+        </div>
+        <div class="faqs-whole-container-answer">
+          AgriLearnNetwork supports a wide range of farming practices, including crop farming, livestock
+                farming,
+                aquaculture, and agroforestry. We provide tailored resources and guidance for each type of farming.
+        </div>
+      </div>
+      <div class="faqs-whole-container-faq-item">
+        <div class="faqs-whole-container-question">
+          Is AgriLearnNetwork free to use? <span class="faqs-whole-container-toggle-icon">+</span>
+        </div>
+        <div class="faqs-whole-container-answer">
+          Yes, AgriLearnNetwork offers free access to most of our resources and tools. However, we also provide
+          premium content and services which are available for a subscription fee.
+        </div>
+      </div>
+      <div class="faqs-whole-container-faq-item">
+        <div class="faqs-whole-container-question">
+          Can I get personalized advice from experts on Agrilearn Network? <span class="faqs-whole-container-toggle-icon">+</span>
+        </div>
+        <div class="faqs-whole-container-answer">
+          Yes, AgriLearnNetwork offers personalized advice from agricultural experts. You can book one-on-one
+                consultation sessions to discuss specific issues and get tailored solutions.
+        </div>
+      </div>
+      <div class="faqs-whole-container-faq-item">
+        <div class="faqs-whole-container-question">
+          How can I stay updated with the latest agricultural trends and news? <span class="faqs-whole-container-toggle-icon">+</span>
+        </div>
+        <div class="faqs-whole-container-answer">
+          To stay updated with the latest agricultural trends and news, you can subscribe to our newsletter.
+                Additionally, our platform regularly updates its blog and news section with relevant articles and
+                information.
+        </div>
+      </div>
+      <div class="faqs-whole-container-faq-item">
+        <div class="faqs-whole-container-question">
+          Does AgriLearnNetwork offer any training programs or courses? <span class="faqs-whole-container-toggle-icon">+</span>
+        </div>
+        <div class="faqs-whole-container-answer">
+          Yes, AgriLearnNetwork offers a variety of training programs and courses covering different aspects of
+                farming. These programs are designed to enhance your knowledge and skills in agriculture.
+        </div>
+      </div>
+      <div class="faqs-whole-container-faq-item">
+        <div class="faqs-whole-container-question">
+          How do I participate in community forums on AgriLearnNetwork? <span class="faqs-whole-container-toggle-icon">+</span>
+        </div>
+        <div class="faqs-whole-container-answer">
+          To participate in community forums, you need to log in to your AgriLearnNetwork account and navigate
+          to
+          the forums section. You can post questions, share experiences, and engage with other community members.
+        </div>
+      </div>
+    </div>
+    <div class="faqs-whole-container-image">
+      <img src="../faq/7 (1).png" alt="faq image">
+    </div>
   </div>
 
-
-  <!--Footer -->
   <footer class="footer">
     <div class="footer-grid">
       <div class="footer-title">
@@ -184,75 +148,55 @@
       <div class="footer-icons">
         <p><b>Follow us on our socials:</b></p>
         <div class="socialIcons">
-          <a href="mailto:AgriLearnNetwork@gmail.com" class="email-link" data-tooltip="AgriLearnNetwork@gmail.com"><i
-              class="fas fa-envelope"></i></a>
+          <a href="mailto:AgriLearnNetwork@gmail.com" class="email-link" data-tooltip="AgriLearnNetwork@gmail.com"><i class="fas fa-envelope"></i></a>
           <a href="https://www.instagram.com/your_username_here" target="_blank"><i class="fab fa-instagram"></i></a>
           <a href="https://twitter.com/your_username_here" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
-          <a href="https://www.facebook.com/your_page_or_profile_here" target="_blank"><i
-              class="fab fa-facebook"></i></a>
+          <a href="https://www.facebook.com/your_page_or_profile_here" target="_blank"><i class="fab fa-facebook"></i></a>
         </div>
       </div>
     </div>
-<div class="quick-links">
+    <div class="quick-links">
       <h2>Quick Links</h2>
       <ul>
-        <li>
-          <a href="../index.html">
-            <p>Home</p>
-          </a>
-        </li>
-        <li>
-          <a href="../about/about.html">
-            <p>About Us</p>
-          </a>
-        </li>
-        <li>
-          <a href="../blog/blogpage.html">
-            <p>Blogs</p>
-          </a>
-        </li>
-        <li>
-          <a href="./faqpage.html">
-            <p>FAQs</p>
-          </a>
-        </li>
-        <li>
-          <a href="../index.html#Resource Library">
-            <p>Resource Library</p>
-          </a>
-        </li>
-        <li>
-          <a href="../index.html#contact">
-            <p>Contact Us</p>
-          </a>
-        </li>
-        <li>
-          <a href="../buyproducts/buy_products.html"><p>Buy Products</p></a>
-        </li>
+        <li><a href="../index.html"><p>Home</p></a></li>
+        <li><a href="../about/about.html"><p>About Us</p></a></li>
+        <li><a href="../blog/blogpage.html"><p>Blogs</p></a></li>
+        <li><a href="./faqpage.html"><p>FAQs</p></a></li>
+        <li><a href="../index.html#Resource Library"><p>Resource Library</p></a></li>
+        <li><a href="../index.html#contact"><p>Contact Us</p></a></li>
+        <li><a href="../buyproducts/buy_products.html"><p>Buy Products</p></a></li>
       </ul>
     </div>
     <div class="footer-text footer-right">
-      <p style="font-weight: 600; font-size: 15px">
-        Copyright &copy;
-        <script>
-          document.write(new Date().getFullYear());
-        </script>
-        by AgriLearnNetwork | All Rights Reserved.
-      </p>
+      <p style="font-weight: 600; font-size: 15px">Copyright &copy; <script>document.write(new Date().getFullYear());</script> by AgriLearnNetwork | All Rights Reserved.</p>
     </div>
   </footer>
+
   <div id="backtoTop">
     <a href="faqpage.html"><i class="bx bx-up-arrow-alt"></i></a>
   </div>
   <div class="cursor"></div>
-    <div class="cursor2"></div>
-
-
+  <div class="cursor2"></div>
+  
   <script src="../script.js"></script>
-
-
+  <style>
+    body {
+      opacity: 0; /* Start with opacity 0 to hide content */
+      transition: opacity 0.6s ease; /* Smooth transition for opacity change */
+    }
+    body.loaded {
+      opacity: 1; /* Make content visible */
+    }
+  </style>
   <script>
-document.addEventListener('DOMContentLoaded', function () {
+    // When the entire page (including images and stylesheets) has loaded
+    window.addEventListener('load', function() {
+      // Add 'loaded' class to body to trigger the transition
+      document.body.classList.add('loaded');
+    });
+  </script>
+  <script>
+    document.addEventListener('DOMContentLoaded', function () {
   const themeToggle = document.querySelector('.theme-toggle');
   const body = document.body;
   const accordions = document.querySelectorAll('.accordion-header img');
@@ -406,10 +350,28 @@ document.addEventListener('DOMContentLoaded', function () {
     document.addEventListener("mousemove",function(e){
       cursor.style.cssText = cursor2.style.cssText = "left: " + e.clientX + "px; top: " + e.clientY + "px;";
     });
+
+    document.addEventListener("DOMContentLoaded", function() {
+    const questions = document.querySelectorAll(".faqs-whole-container-question");
+ 
+    questions.forEach(question => {
+        question.addEventListener("click", function() {
+            const faqItem = this.parentElement;
+            const answer = faqItem.querySelector(".faqs-whole-container-answer");
+
+            faqItem.classList.toggle("active");
+
+            if (faqItem.classList.contains("active")) {
+                answer.style.maxHeight = answer.scrollHeight + "px";
+            } else {
+                answer.style.maxHeight = "0";
+            }
+        });
+    });
+});
   </script>
 
 
-  
 </body>
 
 </html>
