--- a/index.html
+++ b/index.html
@@ -51,13 +51,14 @@
       <div class="loader-section section-right"></div>
   </div>
     <header class="header">
-      <img
-        src="icon.png"
-        alt="logo"
-        style="height: 50px; width: 50px; margin-right: 10px;"
-      />
-      <a href="#" class="logo" style="margin-inline-end: auto"
-        ><h3>AgriLearnNetwork</h3>
+      <a href="#" class="logo">
+
+        <img
+          src="icon.png"
+          alt="logo"
+          style="height: 50px; width: 50px; margin-right: 10px;"
+        />
+      <h3>AgriLearnNetwork</h3>
       </a>
       
       <!-- adding the toggle mode button -->
