--- a/index.html
+++ b/index.html
@@ -41,6 +41,15 @@
 
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <!-- <link rel="icon" href="./agriculture-icon-png-2804.png" type="'image/png"> -->
+     <style>
+      .legal-page a {
+        text-decoration: none;
+        color: white;
+      }
+      .legal-page a:hover {
+        color: rgb(192, 223, 100);;
+      }
+     </style>
   </head>
 
   <body>
@@ -523,6 +532,7 @@
           <li>
             <a href="./buyproducts/buy_products.html"><p>Buy Products</p></a>
           </li>
+          
         </ul>
       </div>
       <div class="footer-text footer-right">
@@ -531,7 +541,9 @@
           <script>
             document.write(new Date().getFullYear());
           </script>
-          by AgriLearnNetwork | All Rights Reserved.
+          by AgriLearnNetwork | All Rights Reserved
+          <span class="legal-page"><a href="termsandconditions.html">| Terms and Conditions</a></span>
+          <span class="legal-page"><a href="privacypolicy.html">| Privacy Policy</a></span>
         </p>
       </div>
     </footer>
