--- a/FAQS/faqpage.html
+++ b/FAQS/faqpage.html
@@ -21,7 +21,7 @@
 <body>
   <header class="header">
     <img src="../icon.png" alt="logo" style="height: 50px; width: 50px; margin-right: 10px" />
-    <a href="#" class="logo" style="margin-inline-end: auto">
+    <a href="/index.html" class="logo" style="margin-inline-end: auto">
       <h3>AgriLearnNetwork</h3>
     </a>
 
