--- a/login/login.html
+++ b/login/login.html
@@ -31,7 +31,7 @@
         alt="logo"
         style="height: 50px; width: 50px; margin-right: 10px"
       />
-      <a href="#" class="logo" style="margin-inline-end: auto"
+      <a href="/index.html" class="logo" style="margin-inline-end: auto"
         ><h3>AgriLearnNetwork</h3>
       </a>
 
