--- a/FAQS/faqpage.html
+++ b/FAQS/faqpage.html
@@ -52,7 +52,7 @@
       <div class="faq_heading" data-aos="fade-up">Frequently Asked Questions (FAQ)</div>
       <div class="faq_box">
         <div class="image" data-aos="fade-right">
-          <img class="faq-img" src="../faq/FAQ.png" alt="FAQ">
+          <img class="faq-img" src="../faq/7 (1).png" alt="FAQ">
         </div>
         <div class="accordion-container" data-aos="fade-left">
           <!-- Question-1 -->
