Added Image of cart

--- a/buyproducts/buy_products.html
+++ b/buyproducts/buy_products.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <div class="cart">
-      <h1>cart</h1>
+      <img class="cart-image" src="../images/cart.png" alt="Cart Image">
     </div>
     <div class="notify">
 
