Revert "added search bar to the buy product page"

--- a/buyproducts/buy_products.html
+++ b/buyproducts/buy_products.html
@@ -64,19 +64,9 @@
         <a href="../login/login.html">
           <button id="log-in-btn" class="login-btn">Login</button>
         </a>
-      </nav><br><br><br><br>
-      
-    </header><center>
-    <h2 style="color: #053314;font-size: 50px;position:absolute;top:100px;left:550px;text-shadow:2px 2px 8px rgb(249, 249, 238)">Agro<span style="color: #0c891f;"> Products</span> </h2></center>
-  <!-- adding searchbar at the top of the page -->
-   <div class="productsearch">
-    <input type="text" class="searchbar" placeholder="Search..." id="searchbar" name="searchbar" type="text" oninput="searchProducts()">
-    <i class="fa-solid fa-magnifying-glass glass"></i>
-   </div>
-  
-   
-   <br><br><br><br><br><br><br><br><br><br><br><br>
- 
+      </nav>
+    </header>
+
     <div class="container" id="products">
       <!-- Product Divisions (21 products) -->
       <div class="product">
@@ -521,7 +511,7 @@
       </div>
     </div>
 
-    <div class="mini-cart" id="mini-cart">
+    <div class="mini-cart id="mini-cart">
       <h1><center>CART</center></h1>
       <ul id="cart-items"></ul>
       <br />
