#added no search found message and hidden the footer also

--- a/buyproducts/buy_products.html
+++ b/buyproducts/buy_products.html
@@ -72,13 +72,17 @@
    <div class="productsearch">
     <input type="text" class="searchbar" placeholder="Search..." id="searchbar" name="searchbar" type="text" oninput="searchProducts()">
     <i class="fa-solid fa-magnifying-glass glass"></i>
+ 
+
    </div>
-  
+   <!-- <div id="no-results-message" style="display:none;"></div> -->
    
    <br><br><br><br><br><br><br><br><br><br><br><br>
  
     <div class="container" id="products">
+      <div id="no-results-message"><h1>No search results found....</h1></div>
       <!-- Product Divisions (21 products) -->
+      <!-- <div id="no-results-message" style="display: none;"></div> -->
       <div class="product">
         <img
           src="https://imgs.search.brave.com/C0kR0ZD3syOLiv-dt8S_Rk6dyKcmB8zVgEXP2uoXa1k/rs:fit:500:0:0/g:ce/aHR0cHM6Ly93d3cu/ZGVlcmUuY29tL2Fz/c2V0cy9pbWFnZXMv/aGF5LWZvcmFnZS9i/YWxpbmcvcm91bmQt/YmFsZXIvNTYxLUJh/bGVyLWhheS1mb3Jh/Z2UtYmFsaW5nLXBh/Z2UtMTAyNHg1NzYu/anBn"
@@ -531,8 +535,11 @@
       </center>
     </div>
     <br /><br /><br /><br />
-    <br /><br />
-
+    <br /><br /> <br /><br /><br /><br />
+    <br /><br /><br /><br />
+    <br /><br /><br /><br /><br />
+    <br /><br>
+  
     <footer class="footer">
       <div class="footer-grid">
         <div class="footer-title">
