Update Terms and conditions

--- a/termsandconditions.html
+++ b/termsandconditions.html
@@ -47,23 +47,24 @@
 
     <style>
     body {
-            background-color: #027833 !important;
+      background-color: #023b1a !important;
             padding: 0;
             margin-top: 120px;
             background-color: #f9f9f9;
             color: #a9dfc8;
         }
     .terms-container  {
+      
         border-radius: 21px;
             width: 67%;
             margin: 0px auto;
             padding: 20px;
             margin-bottom: 0px;
-            background: linear-gradient(135deg, rgb(249, 249, 187), rgb(31, 102, 31));
+            background: linear-gradient(135deg, rgb(249, 249, 187), rgb(75, 186, 75));
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
     .terms-container .terms-heading{
-        font-family:'Arial Narrow Bold', sans-serif;
+            font-family: 'Segoe UI' !important;
             font-size: 49px;
             color: #0c5e0a;
             font-weight: bold;
@@ -71,16 +72,17 @@
             margin-bottom: 20px;
         }
     .terms-container .terms-subheading {
-            font-size: 2.5em;
+            font-size: 2.65em;
             margin-top: 20px;
-            color: rgb(45, 160, 32);
+            color: rgb(22, 93, 15);
             margin-bottom: 10px;
         }
     .terms-container .terms-para {
+      font-family: 'Segoe UI' !important;
             margin-bottom: 15px;
-            font-size: 16px;
+            font-size: 17.5px;
             text-align: justify;
-            color: #0f4e32;
+            color: black;
         }
 
     </style>
