--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -57,11 +57,11 @@
             border-radius: 21px;
             width: 67%;
             margin: 0px auto;
-            padding: 20px;background: linear-gradient(135deg, rgb(250, 250, 167), rgb(31, 102, 31));
+            padding: 20px;background: linear-gradient(135deg, rgb(250, 250, 167), rgb(75, 186, 75));
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
     .privacy-container .privacy-heading{
-        font-family:'Arial Narrow Bold', sans-serif;
+            font-family: 'Segoe UI' !important;
             font-size: 49px;
             color: #0c5e0a;
             font-weight: bold;
@@ -69,16 +69,17 @@
             margin-bottom: 20px;
         }
     .privacy-container .privacy-subheading {
-            font-size: 2.5em;
+            font-size: 2.65em;
             margin-top: 20px;
-            color: rgb(45, 160, 32);
+            color: rgb(22, 93, 15);
             margin-bottom: 10px;
         }
     .privacy-container .privacy-para {
+            font-family: 'Segoe UI' !important;
             margin-bottom: 15px;
-            font-size: 16px;
+            font-size: 17.5px;
             text-align: justify;
-
+            color: #000;
         }
 
     </style>
