add hovering effect in social icons

--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -162,21 +162,22 @@
           <div class="footer-icons">
             <p><b>Follow us on our socials:</b></p>
             <div class="socialIcons">
-              <a
+              <a id="mail"
                 href="mailto:AgriLearnNetwork@gmail.com"
                 class="email-link"
                 data-tooltip="AgriLearnNetwork@gmail.com"
                 ><i class="fas fa-envelope"></i
               ></a>
-              <a
+              <a id="inst"
                 href="https://www.instagram.com/your_username_here"
                 target="_blank"
                 ><i class="fab fa-instagram"></i
               ></a>
-              <a href="https://twitter.com/your_username_here" target="_blank"
+              <a id="twit"
+               href="https://twitter.com/your_username_here" target="_blank"
                 ><i class="fa-brands fa-x-twitter"></i
               ></a>
-              <a
+              <a id="fb"
                 href="https://www.facebook.com/your_page_or_profile_here"
                 target="_blank"
                 ><i class="fab fa-facebook"></i
