--- a/FAQS/faqpage.html
+++ b/FAQS/faqpage.html
@@ -11,6 +11,7 @@
   <!-- <link rel="stylesheet" href="style.css" /> -->
   <link rel="stylesheet" href="./faqpagestyle.css" />
   <link rel="icon" href="../icon.png" type="image/x-icon" />
+  <link rel="stylesheet" href="../testimonials/testimonials.css">
  
   <script src="https://kit.fontawesome.com/b08b6de27e.js" crossorigin="anonymous"></script>
 
@@ -238,6 +239,8 @@
           document.write(new Date().getFullYear());
         </script>
         by AgriLearnNetwork | All Rights Reserved.
+        <span class="legal-page"><a href="../testimonials/termsandconditions.html">| Terms and Conditions</a></span>
+          <span class="legal-page"><a href="../testimonials/privacypolicy.html">| Privacy Policy</a></span>
       </p>
     </div>
   </footer>
