--- a/login/login.html
+++ b/login/login.html
@@ -15,6 +15,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../style.css" />
+    <link rel="stylesheet" href="../testimonials/testimonials.css">
 
     <link rel="icon" href="../icon.png" type="image/x-icon" />
     <link rel="stylesheet" type="text/css" href="../style.css" />
@@ -191,6 +192,8 @@
             document.write(new Date().getFullYear());
           </script>
           by AgriLearnNetwork | All Rights Reserved.
+          <span class="legal-page"><a href="../testimonials/termsandconditions.html">| Terms and Conditions</a></span>
+          <span class="legal-page"><a href="../testimonials/privacypolicy.html">| Privacy Policy</a></span>
         </p>
       </div>
       <div class="cursor"></div>
