--- a/buyproducts/buy_products.html
+++ b/buyproducts/buy_products.html
@@ -517,7 +517,7 @@
       <h1><center>CART</center></h1>
       <ul id="cart-items"></ul>
       <br />
-      <center><button id="checkout">Checkout</button></center>
+      <center><button id="checkout" style="cursor: pointer;">Checkout</button></center>
       <center>
         <h2>Total price : <span id="dyna">0</span></h2>
       </center>
