--- a/about/about.html
+++ b/about/about.html
@@ -22,9 +22,28 @@
     <script src="https://kit.fontawesome.com/c732ec9339.js" crossorigin="anonymous"></script>
 
     <title>About Us | AgriLearnNetwork</title>
+    <style>#progressBar {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 0%;
+        height: 8px;
+        background-color: #bf9605;
+        z-index: 9999;
+    
+      }</style>
 </head>
 
 <body>
+    <div id="progressBar"></div>
+    <script>
+      window.onscroll = function () {
+        var winScroll = document.body.scrollTop || document.documentElement.scrollTop;
+        var height = document.documentElement.scrollHeight - document.documentElement.clientHeight;
+        var scrolled = (winScroll / height) * 100;
+        document.getElementById("progressBar").style.width = scrolled + "%";
+      };
+    </script>
 
     <!-- header -->
     <header class="header">
