--- a/login/login.html
+++ b/login/login.html
@@ -24,8 +24,27 @@
       src="https://kit.fontawesome.com/b08b6de27e.js"
       crossorigin="anonymous"
     ></script>
+    <style>#progressBar {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 0%;
+      height: 8px;
+      background-color: #bf9605;
+      z-index: 9999;
+  
+    }</style>
   </head>
   <body>
+    <div id="progressBar"></div>
+    <script>
+      window.onscroll = function () {
+        var winScroll = document.body.scrollTop || document.documentElement.scrollTop;
+        var height = document.documentElement.scrollHeight - document.documentElement.clientHeight;
+        var scrolled = (winScroll / height) * 100;
+        document.getElementById("progressBar").style.width = scrolled + "%";
+      };
+    </script>
     <header class="header">
       <img
         src="../icon.png"
