--- a/buyproducts/buy_products.html
+++ b/buyproducts/buy_products.html
@@ -17,8 +17,12 @@
       crossorigin="anonymous"
     ></script>
     <link rel="icon" href="../icon.png" type="image/x-icon" />
+    <link rel="stylesheet" href="/Scrollbar/scrollbar.css">
   </head>
   <body>
+    <div id="progressBar"></div>
+    <script src="/Scrollbar/scrollbar.js"></script>
+
     <div class="cart">
       <img class="cart-image" src="../images/cart.png" alt="Cart Image">
     </div>
