--- a/testimonials/privacypolicy.html
+++ b/testimonials/privacypolicy.html
@@ -83,9 +83,11 @@
         }
 
     </style>
-
+<link rel="stylesheet" href="/Scrollbar/scrollbar.css">
 </head>
 <body>
+  <div id="progressBar"></div>
+    <script src="/Scrollbar/scrollbar.js"></script>
     <header class="header">
         <img
           src="../icon.png"
