progress bar added to remaining pages

--- a/FAQS/faqpage.html
+++ b/FAQS/faqpage.html
@@ -21,7 +21,7 @@
 
 <body>
   <div id="progressBar"></div>
-    <script src="/Scrollbar/scrollbar.js"></script>
+    <script src="../Scrollbar/scrollbar.js"></script>
 
   <header class="header">
     <img src="../icon.png" alt="logo" style="height: 50px; width: 50px; margin-right: 10px" />
