--- a/about/about.html
+++ b/about/about.html
@@ -27,7 +27,7 @@
 
 <body>
     <div id="progressBar"></div>
-    <script src="/Scrollbar/scrollbar.js"></script>
+    <script src="../Scrollbar/scrollbar.js"></script>
 
     <!-- header -->
     <header class="header">
