--- a/buyproducts/buy_products.html
+++ b/buyproducts/buy_products.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <div id="progressBar"></div>
-    <script src="/Scrollbar/scrollbar.js"></script>
+    <script src="../Scrollbar/scrollbar.js"></script>
 
     <div class="cart">
       <img class="cart-image" src="../images/cart.png" alt="Cart Image">
