--- a/login/login.html
+++ b/login/login.html
@@ -28,7 +28,7 @@
   </head>
   <body>
     <div id="progressBar"></div>
-    <script src="/Scrollbar/scrollbar.js"></script>
+    <script src="../Scrollbar/scrollbar.js"></script>
     <header class="header">
       <img
         src="../icon.png"
