Fix Terms/Privacy text responsive and Login Center

--- a/testimonials/privacypolicy.html
+++ b/testimonials/privacypolicy.html
@@ -83,6 +83,20 @@
             color: #000;
         }
 
+        @media (max-width: 768px) {
+          .privacy-container .privacy-heading {
+                font-size: 20px;
+            }
+            .privacy-container .privacy-subheading
+            {
+              font-size: 16px;
+            }
+            .privacy-container .privacy-para
+            {
+              font-size: 14px;
+            }
+        }
+
     </style>
 <link rel="stylesheet" href="/Scrollbar/scrollbar.css">
 </head>
