--- a/testimonials/termsandconditions.html
+++ b/testimonials/termsandconditions.html
@@ -84,7 +84,21 @@
             text-align: justify;
             color: black;
         }
-
+       
+      @media (max-width: 768px) {
+        .terms-container .terms-heading {
+              font-size: 20px;
+          }
+          .terms-container .terms-subheading
+          {
+            font-size: 16px;
+          }
+          .terms-container .terms-para
+          {
+            font-size: 14px;
+          }
+      }
+    
     </style>
     <link rel="stylesheet" href="/Scrollbar/scrollbar.css">
 
