--- a/testimonials/privacypolicy.html
+++ b/testimonials/privacypolicy.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Privacy Policy - AgriLearnNetwork</title>
    
-    <link rel="icon" href="icon.png" type="image/x-icon" />
+    <link rel="icon" href="../icon.png" type="image/x-icon" />
     <link rel="stylesheet" type="text/css" href="../style.css" />
   
     <link
