--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@
     <div class="icon-bar">
       <a href="https://www.instagram.com/" class="instagram" target="_blank">Instagram<i class="fab fa-instagram"></i></a>
       <a href="https://www.facebook.com/" class="facebook" target="_blank">Facebook<i class="fab fa-facebook"></i></a>
-      <a href="https://x.com/" class="twitter" target="_blank">Twitter<i class="fab fa-twitter"></i></a>
+      <a href="https://x.com/" class="twitter" target="_blank">Twitter<i class="fab fa-x-twitter"></i></a>
       <a href="https://www.linkedin.com/" class="linkedIn" target="_blank">LinkedIn<i class="fab fa-linkedin"></i></a>
     </div>
 
