--- a/buyproducts/buy_products.html
+++ b/buyproducts/buy_products.html
@@ -541,7 +541,10 @@
         <h1><center>CART</center></h1>
         <ul id="cart-items"></ul>
         <br>
-        <center><button id="checkout">Checkout</button></center>
+        <center><a href="./checkout.html">
+          <button id="checkout" >Checkout</button>
+
+        </a></center>
         <center><h2>Total price : <span id="dyna">0</span></h2></center>
     </div>
     <br /><br /><br /><br />
