--- a/FAQS/faqpage.html
+++ b/FAQS/faqpage.html
@@ -15,7 +15,7 @@
  
   <script src="https://kit.fontawesome.com/b08b6de27e.js" crossorigin="anonymous"></script>
 
-  <link rel="stylesheet" href="/Scrollbar/scrollbar.css">
+  <link rel="stylesheet" href="../Scrollbar/scrollbar.css">
 
 </head>
 
