--- a/buyproducts/buy_products.html
+++ b/buyproducts/buy_products.html
@@ -17,7 +17,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="icon" href="../icon.png" type="image/x-icon" />
-    <link rel="stylesheet" href="/Scrollbar/scrollbar.css">
+    <link rel="stylesheet" href="../Scrollbar/scrollbar.css">
   </head>
   <body>
     <div id="progressBar"></div>
