--- a/login/login.html
+++ b/login/login.html
@@ -24,7 +24,7 @@
       src="https://kit.fontawesome.com/b08b6de27e.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="/Scrollbar/scrollbar.css">
+    <link rel="stylesheet" href="../Scrollbar/scrollbar.css">
   </head>
   <body>
     <div id="progressBar"></div>
